--- a/blocked.html
+++ b/blocked.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>ДОСТУП ЗАБЛОКИРОВАН</h1>
-    <p>Доступ будет разблокирован через:</p>
+    <p>Следующие попытки будут доступны через:</p>
     <div id="timer">--:--</div>
 
     <script>
@@ -34,3 +34,4 @@
     </script>
 </body>
 </html>
+
