--- a/blocked.html
+++ b/blocked.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>ДОСТУП ЗАБЛОКИРОВАН</title>
+    <title>ДОСТУП ОГРАНИЧЕН</title>
     <style>
         body { font-family: sans-serif; display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; background: #fff0f0; margin: 0; }
         h1 { color: #cc0000; }
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <h1>ДОСТУП ЗАБЛОКИРОВАН</h1>
+    <h1>ДОСТУП ОГРАНИЧЕН</h1>
     <div id="timer">--:--:--</div>
     <p class="info">Лимит попыток исчерпан. Попробуйте позже.</p>
 
@@ -42,3 +42,4 @@
     </script>
 </body>
 </html>
+
